구장변경에 따른 UI 변화 체계 완성

--- a/SCSS/stadiumList.module.scss
+++ b/SCSS/stadiumList.module.scss
@@ -1,18 +1,23 @@
 .stadiumInfo{
-    height: 9vh;
-    line-height: normal;
+    height: auto !important; 
+    line-height: initial !important;
+    overflow: initial !important;
     .flag{
         display: inline-block;
+        height: 30px;
+        width: 30px;
     }
     .details{
         display: inline-block;
+        line-height: initial;
         .title{
             display: block;
-            height: 3vh;
+            line-height: 2;
+            height: 30px;
         }
         .tags{
             display: block;
-            height: 3vh;
+            height: 25px;
         }
     }
 
