--- a/SCSS/stadiumList.module.scss
+++ b/SCSS/stadiumList.module.scss
@@ -4,8 +4,8 @@
     overflow: initial !important;
     .flag{
         display: inline-block;
-        height: 30px;
-        width: 30px;
+        height: 25px;
+        width: 25px;
     }
     .details{
         display: inline-block;
@@ -18,6 +18,7 @@
         .tags{
             display: block;
             height: 25px;
+            overflow: auto;
         }
     }
 
