--- a/SCSS/headerMenu.module.scss
+++ b/SCSS/headerMenu.module.scss
@@ -58,7 +58,6 @@ $sm : 576px;
                 }
                 .searchicon{
                     margin-right: 4px;
-                    cursor: pointer;
                 }
                 .searchinput{
                     outline: none;
@@ -72,7 +71,7 @@ $sm : 576px;
                     float: right;
                     color: #585858;
                     cursor: pointer;
-                    display: none;
+                    display: block;
                     height: 41px;
                     font-size: 15px;
                     line-height: 2.7;
@@ -112,8 +111,10 @@ $sm : 576px;
                     float: right;
                     color: #585858;
                     cursor: pointer;
-                    display: none;
+                    display: block;
                     height: 41px;
+                    width: 20px;
+                    text-align: center;
                     font-size: 15px;
                     line-height: 2.7;
                 }
