--- a/SCSS/headerMenu.module.scss
+++ b/SCSS/headerMenu.module.scss
@@ -6,7 +6,7 @@ $sm : 576px;
     }
     background-color: #fff;
     padding: 0 5px;
-    margin-bottom: 5px;
+    // margin-bottom: 5px;
     ul{
         list-style: none;
         outline: none;
