--- a/SCSS/headerMenu.module.scss
+++ b/SCSS/headerMenu.module.scss
@@ -43,6 +43,9 @@ $sm : 576px;
                 @media screen and (max-width: $sm){
                   padding: 0 10px;
                 }
+                @media screen and (max-width: 320px){
+                  padding: 0;
+                }
             }
             .title{
                 @media screen and (max-width: $sm){
@@ -57,7 +60,9 @@ $sm : 576px;
                 margin-right: 10px;
                 font-size: 14px;
                 display: inline-block;
-
+                @media screen and (max-width: 320px){
+                  margin: 0;
+                }
             }
             .searchtitle{
                 background-color: #f1f3f4;
