fix: responsive css

--- a/SCSS/headerMenu.module.scss
+++ b/SCSS/headerMenu.module.scss
@@ -18,6 +18,9 @@ $sm : 576px;
             border-bottom: 2px solid transparent;
             padding: 0 10px;
             cursor: pointer;
+            @media screen and (max-width: 660px){
+              padding: 0 5px;
+            }
             &:hover{
                 color: #1890ff;
             }
@@ -40,11 +43,15 @@ $sm : 576px;
                 &:hover{
                   background-color: #ddd;
                 }
-                @media screen and (max-width: $sm){
+                @media screen and (max-width: 760px){
+                  padding: 0 15px;
+                  margin-right: 0px;
+                }
+                @media screen and (max-width: 660px){
                   padding: 0 10px;
                 }
-                @media screen and (max-width: 320px){
-                  padding: 0;
+                @media screen and (max-width: 400px){
+                  padding: 0 5px;
                 }
             }
             .title{
@@ -78,6 +85,9 @@ $sm : 576px;
                 @media screen and (max-width: $sm){
                     display: none;
                 }
+                @media screen and (max-width: 700px){
+                  width: 300px;
+                }
                 .searchicon{
                     margin-right: 4px;
                 }
@@ -88,6 +98,9 @@ $sm : 576px;
                     width: 270px;
                     background-color: #f1f3f4;
                     height: 41px;
+                    @media screen and (max-width: 700px){
+                      width: 220px;
+                    }
                 }
                 .searchDelete{
                     float: right;
