--- a/SCSS/feedLayout.module.scss
+++ b/SCSS/feedLayout.module.scss
@@ -60,8 +60,41 @@ $sm : 576px;
         right: 0;
       }
     }
+    .photoBrick{
+      border: 1px solid #ececec;
+      border-radius: 10px;
+      .thumbnail{
+        position: relative;
+        padding-top: 100%;
+        overflow: hidden;
+        text-align: center;
+        vertical-align: middle;
+        .centered{
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          -webkit-transform: translate(50%,50%);
+          -ms-transform: translate(50%,50%);
+          transform: translate(50%,50%);
+          img{
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            max-width: 100%;
+            height: auto;
+            -webkit-transform: translate(-50%,-50%);
+            -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
+            transition: all 0.3s ease-out;
+          }
+        }
+      }
+    }
   }
-  
   .postWall{
     position: relative;
   }
