--- a/SCSS/feedLayout.module.scss
+++ b/SCSS/feedLayout.module.scss
@@ -64,6 +64,7 @@ $sm : 576px;
     .photoBrick{
       border: 1px solid #ececec;
       border-radius: 10px;
+      overflow: hidden;
       .thumbnail{
         position: relative;
         padding-top: 100%;
